
 * plugins/Makefile.am: Fix typo (thanks Slava Semushin for reporting).
 * scintilla/include/Platform.h:
   Use a better check for PLAT_GTK_WIN32 (backport from Scintilla CVS).
 * src/socket.c:
   Create the Unix Domain Socket for detecting a running instance in
   system's tmp directory and create a symlink to it in Geany's
   configuration directory (closes #1888561).


2008-02-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/autosave.c, plugins/filebrowser.c:
   Make forgotten strings translatable.


2008-02-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/include/Platform.h: Fix definition of PLAT_GTK_WIN32 on
                                 Windows to fix Copy&Paste problems.
 * New release: Geany 0.13 "Vensell".
 * configure.in, geany.nsi, geany_private.rc, win32-config.h,
   src/geany.h: Post-release version bump.


2008-02-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   List Cut, Copy, Paste keybinding descriptions.
 * src/plugindata.h, src/plugins.c:
   Add sci_get_current_line() to plugin API.
   Add ui_table_add_row(), ui_path_box_new() to plugin API (thanks to
   Yura Siamashka).
 * doc/geany.txt, doc/geany.html, NEWS:
   Show default shortcuts in Keybindings section.
 * src/plugindata.h, src/plugins.c:
   Add ui_button_new_with_image() to plugin API.


2008-02-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.html, doc/geany.txt, images/*: Update images for 0.13.
 * src/geany.h: Reduce minimum window size to 550x350 (closes #1883367).


2008-02-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html, NEWS:
   Add Indentation subsection under Editor section.
 * doc/geany.txt, doc/geany.html, NEWS:
   Update Project section for project-based session support.


2008-01-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/autosave.c: Fixed a little typo